testsuite/tests/contrib/lkt_semantic/object_call/test.lkt
# Test that we can correctly use the call syntax on objects that have no
# declaration, as for example, objects returned by functions.

@external fun arr(size: Int): Array[Int]
val a: Int = arr(12)(1)

@invalid val incorrect_call: Int = arr(12)("a")
@invalid val incorrect_call_1: Int = arr(12)()
@invalid val incorrect_call_2: Int = arr(12)(1, 2)

@external fun return_func(): (Int, Int) -> Int

val a: Int = return_func()(1, 2)
@invalid val b: Int = return_func()(1, '2')
